--- a/formulario.html
+++ b/formulario.html
@@ -21,7 +21,7 @@
     </main>
 
     <footer>
-        <a href="index.html">Ir a adelante</a>
+        <a href="index.html">Ir a Inicio</a>
     </footer>
 
 </body>
