--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
 
     <footer>
         <br>
-        <a href="index.html">Ir a Inicio</a>
+        <a href="index.html">Ir a adelante</a>
     </footer>
     
 </body>
